# gmail-reader

./: .gitignore  gmail-reader.py  pyproject.toml
